--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -44,18 +44,29 @@ jobs:
           sed -i "s/var Version = \".*\"/var Version = \"$VERSION\"/" cmd/protoc-gen-goose/main.go
           echo "Updated version in cmd/protoc-gen-goose/main.go to $VERSION"
 
+          sed -i "s|github.com/soyacen/goose v[0-9]\+\.[0-9]\+\.[0-9]\+|github.com/soyacen/goose $VERSION|g" middleware/jwtauth/go.mod
+          echo "Updated version in middleware/jwtauth/go.mod to $VERSION"
+
+          sed -i "s|github.com/soyacen/goose v[0-9]\+\.[0-9]\+\.[0-9]\+|github.com/soyacen/goose $VERSION|g" middleware/otel/go.mod
+          echo "Updated version in middleware/otel/go.mod to $VERSION"
       - name: Commit and push changes directly
         run: |
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
           git add cmd/protoc-gen-goose/main.go
+          git add middleware/jwtauth/go.mod
+          git add middleware/otel/go.mod
           git commit -m "chore: update version to $VERSION"
           git push
 
       - name: Create and push tag
         run: |
-          git tag ${{ env.VERSION }}
-          git push origin ${{ env.VERSION }}
+          git tag middleware/otel/$VERSION
+          git push origin middleware/otel/$VERSION
+          git tag middleware/jwtauth/$VERSION
+          git push origin middleware/jwtauth/$VERSION
+          git tag $VERSION
+          git push origin $VERSION
           echo "Tag ${{ env.VERSION }} created and pushed successfully"
 
       - name: Create GitHub Release
@@ -64,13 +75,13 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: ${{ env.VERSION }}
-          release_name: Release ${{ env.VERSION }}
+          tag_name: $VERSION
+          release_name: Release $VERSION
           draft: false
           prerelease: false
 
       - name: Output completion message
         run: |
-          echo "Version updated to ${{ env.VERSION }}"
-          echo "Tag ${{ env.VERSION }} has been created and pushed automatically"
+          echo "Version updated to $VERSION"
+          echo "Tag $VERSION has been created and pushed automatically"
           echo "Release workflow will run automatically after pushing the tag."
