refactor(bbr): 重构BBR限流器实现
- 将CPU阈值单位从百分比(0.0-100.0)改为小数(0.0-1.0)
- 修改DoneInfo结构体，将Err字段改为Status状态码字段
- 更新滚动计数器实现，支持最小值跟踪功能
- 修复并发请求处理逻辑，确保正确减少inflight计数
- 添加HTTP中间件状态码捕获功能
- 移除context依赖，优化测试代码
- 重命名otelgoose模块为otel，recoverygoose模块为recovery

feat(release): 更新发布工作流配置

- 修改发布脚本以适配新模块名称
- 添加bbr中间件到版本更新流程
- 更新Git标签创建逻辑以包含otel和bbr模块

test(bbr): 添加BBR中间件测试用例

- 实现完整的HTTP中间件测试套件
- 验证正常请求、限流触发和中间件链功能
- 测试默认状态码处理逻辑

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -47,22 +47,26 @@ jobs:
           sed -i "s|github.com/soyacen/goose v[0-9]\+\.[0-9]\+\.[0-9]\+|github.com/soyacen/goose $VERSION|g" middleware/jwtauth/go.mod
           echo "Updated version in middleware/jwtauth/go.mod to $VERSION"
 
-          sed -i "s|github.com/soyacen/goose v[0-9]\+\.[0-9]\+\.[0-9]\+|github.com/soyacen/goose $VERSION|g" middleware/otelgoose/go.mod
-          echo "Updated version in middleware/otelgoose/go.mod to $VERSION"
+          sed -i "s|github.com/soyacen/goose v[0-9]\+\.[0-9]\+\.[0-9]\+|github.com/soyacen/goose $VERSION|g" middleware/otel/go.mod
+          echo "Updated version in middleware/otel/go.mod to $VERSION"
+
+          sed -i "s|github.com/soyacen/goose v[0-9]\+\.[0-9]\+\.[0-9]\+|github.com/soyacen/goose $VERSION|g" middleware/bbr/go.mod
+          echo "Updated version in middleware/bbr/go.mod to $VERSION"
       - name: Commit and push changes directly
         run: |
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
           git add cmd/protoc-gen-goose/main.go
           git add middleware/jwtauth/go.mod
-          git add middleware/otelgoose/go.mod
+          git add middleware/otel/go.mod
+          git add middleware/bbr/go.mod
           git commit -m "chore: update version to $VERSION"
           git push
 
       - name: Create and push tag
         run: |
-          git tag middleware/otelgoose/$VERSION
-          git push origin middleware/otelgoose/$VERSION
+          git tag middleware/otel/$VERSION
+          git push origin middleware/otel/$VERSION
           git tag middleware/jwtauth/$VERSION
           git push origin middleware/jwtauth/$VERSION
           git tag $VERSION
